# rust-pos

./: .gitignore  Cargo.toml  README.md
docs/: PRD.md  stories.md
frontend/: Cargo.toml
frontend/src/: main.rs
src/: lib.rs  main.rs
src-tauri/: tauri.conf.json
src/api/: auth.rs  cart.rs  kitchen.rs  menu.rs  orders.rs  payment.rs
src/api/admin/: products.rs
src/api/delivery/: webhook.rs
